Bug 443613 - Time Remap is Unavailable when a clip's speed is not 100%
Summary: Time Remap is Unavailable when a clip's speed is not 100%
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 21.08.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-11 21:50 UTC by BoffinBrain
Modified: 2022-01-15 01:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.2
Sentry Crash Report:


Attachments
Screenshot of a clip that appears to have time remapping enabled (60.82 KB, image/png)
2021-10-11 21:50 UTC, BoffinBrain
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BoffinBrain 2021-10-11 21:50:30 UTC
Created attachment 142345 [details]
Screenshot of a clip that appears to have time remapping enabled

SUMMARY

When a clip has had its speed changed, Time Remapping can be enabled, but the Time Remapping panel will remain disabled which can cause major confusion. I encountered this when trying to use the new feature on an existing project.

Additionally, If time remapping is in effect and the clip speed is changed, then the remap flag is still on and the panel is still enabled, until the clip is deselected.


STEPS TO REPRODUCE
1. Add a clip to the timeline and set its speed to 120%.
2. Enable Time Remap from the clips's context menu.
3. Open the Time Remapping panel

OBSERVED RESULT

The panel is disabled.

EXPECTED RESULT

1. The panel should be usable and the clip's speed is reset to 100%, OR
2. An error is shown stating that Clip Speed and Time Remap cannot be used at the same time, OR
3. Time Remap menu option is disabled, preventing step 2 (less desirable since it may not be clear why it's disabled).

ADDITIONAL INFORMATION

What should happen if we attempt to reset the clip speed to 100% and there is not enough space in the timeline?
Comment 1 Julius Künzel 2022-01-15 01:40:23 UTC
Git commit 9d3a7c6ecc726eae2242abeb477d3d8c3f908e68 by Julius Künzel.
Committed on 15/01/2022 at 01:39.
Pushed by jlskuz into branch 'release/21.12'.

Disable "Change Speed" and "Time Remap" actions if the other one is
active
FIXED-IN: 21.12.2

M  +3    -1    src/mainwindow.cpp
M  +12   -3    src/timeline2/view/timelinecontroller.cpp

https://invent.kde.org/multimedia/kdenlive/commit/9d3a7c6ecc726eae2242abeb477d3d8c3f908e68