Disable "Change Speed" and "Time Remap" actions if the other one is active

BUG: 443613
FIXED-IN: 21.12.2